<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>raylib_viz</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="yukky.saito@gmail.com">yukky</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>autoware_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>autoware_auto_perception_msgs</depend>
  <depend>autoware_auto_planning_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>eigen3_cmake_module</depend>
  <depend>eigen</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
